Fix two new -Wconstant-logical-operand warnings

A new Clang version caught these two cases.

(While fixing localized_error.cc, switch the bitfields to unsigned and
tweak a comment.)

TBR=edwardjung,khushalsagar

Bug: 857393
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I88bf4bfb2f3cf7874c308c9b3453e9d01c7c16ee
Reviewed-on: https://chromium-review.googlesource.com/1118165
Reviewed-by: Matt Menke <mmenke@chromium.org>
Reviewed-by: Hans Wennborg <hans@chromium.org>
Commit-Queue: Hans Wennborg <hans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571091}
Former-commit-id: 7ea9a73f82a0271bc542e85805441ae7452f2812